@@ -1,4 +1,5 @@
 [% PROCESS 'html-incblocks.txt' %]
+[% INCLUDE setdate %]
 [% thepath=path(token) %]
 [% INCLUDE htmlstart title=thepath printpath=1 %]
 
