@@ -1,3 +1,8 @@
+2005-07-14  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* templates/html-incblocks.txt: Added date setting dialog.
+	TODO: date format validation.
+
 2005-07-11  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm:
